Revert "create request for get board and add auto migrations for data in DB"
This reverts commit 8fba544d71cc827bd7d010a35d0f95827c5bb958.
