# backend/cmd/api/model/columnDTO/column.go
@@ -7,7 +7,9 @@ import (
 )
 
 type ColumnDTO struct {
-	Name string `json:"name"`
+	Name    string `json:"name"`
+	IsFinal bool   `json:"is_final"`
+	Order   int    `json:"order"` //порядок начинается с 0
 }
 
 type GetColumnDTO struct {
